Updated to match jekyll base

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,1 +1,10 @@
-{{content}}
+---
+layout: layout
+---
+
+<div class="content">
+  <div id="post">
+    <h1>{{ post.title }}</h1>
+    {{ content }}
+  </div>
+</div>
