--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="Daniel Cazzulino" />
+    <link href="https://plus.google.com/107025230922175301277" rel="publisher" />
     <title>{{ page.title }}</title>
   </head>
   <body>
