--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,7 +37,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        {{ page.content }}
+        {{ page.content | markdownify }}
       </section>
 
     </div>
