--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,7 +30,7 @@
 
       <section>
         <div id="title">
-          <h1>Moq</h1>
+          <a href="{{ site.url }}"><h1>Moq</h1></a>
           <p>Test first, mock me later</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Moq">Moq</a></span>
