--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: layout
   <div id="post">
     {{ content }}
 
-    <p><small>on {{ page.date | date_to_string }}</small></p>
+    <p><small>Written on {{ page.date | date_to_string }}</small></p>
   </div>
 
     <div id="disqus_thread"></div>
