Trying out twitter timeline widget

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,9 +37,14 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        {{ content }}
-      </section>
+        <div style="float: right">
+        <a class="twitter-timeline" width="300" height="500" data-dnt="true" href="https://twitter.com/moqthis" data-widget-id="354857168626925568">Tweets by @moqthis</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        </script>
+        </div>
 
+        {{ content }}
+      </section>      
     </div>
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
