--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Daniel Cazzulino" />
     <link href="https://plus.google.com/107025230922175301277" rel="publisher" />
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="../stylesheets/styles.css">
+    <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/javascripts/respond.js"></script>
     <!--[if lt IE 9]>
@@ -43,7 +43,8 @@
         </script>
         </div>
 
-        {{ content }}
+       {{ content }}
+        </div>
       </section>      
     </div>
 
